I made a simple index file with some css to start us off.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pick a Cause</title>
+    <title>Clean Water for the World</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>What is our Cause?</h1>
+    <nav class="top-nav">
+        <ul>
+            <li>Home
+            </li>
+            <li>About Us
+            </li>
+            <li>Contact Us</li>
+        </ul>
+    </nav>
+    <div class="container">
+        <header>
+                <h1>Clean Water for the World</h1>
+                <p>CWW is devoted to making sure everyone on the planet has access to clean
+                    filtered water for drinking.
+                </p>
+        </header>
+            
+    </div>
+
 </body>
 </html>
