--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="top-nav">
         <ul>
-            <li>Home
+            <li><a href="index.html">Home</a>
             </li>
-            <li><a href="about.us">About Us</a>
+            <li>About Us
             </li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -20,8 +20,7 @@
     <div class="container">
         <header>
                 <h1>Clean Water for the World</h1>
-                <p>CWW is devoted to making sure everyone on the planet has access to clean
-                    filtered water for drinking.
+                <p>About CWW
                 </p>
         </header>
             
