Added paragraphs to About Us page

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <div class="container">
         <header>
                 <h1>About CWWW</h1>
-                <p>Lorem ipsum dolor amet next level flexitarian ethical, crucifix salvia af before they sold out listicle heirloom celiac VHS distillery. Humblebrag normcore beard copper mug ramps jianbing, deep v mustache activated charcoal chia. Ennui waistcoat gastropub, tacos food truck next level forage activated charcoal lo-fi fingerstache fam hot chicken shaman raw denim. Meh jianbing taiyaki humblebrag kinfolk narwhal XOXO ramps.
+                <p>Lorem ipsum dolor amet next level flexitarian ethical, crucifix salvia af before they sold out listicle heirloom celiac VHS distillery. Humblebrag normcore beard copper mug ramps jianbing, deep v mustache activated charcoal chia. Ennui waistcoat gastropub, tacos food truck next level forage activated charcoal lo-fi fingerstache fam hot chicken shaman raw denim. Meh jianbing taiyaki humblebrag kinfolk narwhal XOXO ramps.</p>
 
                 <p>Messenger bag irony ethical 90's salvia seitan fixie sriracha tattooed intelligentsia DIY pickled tousled ramps. Fingerstache hot chicken crucifix tbh readymade occupy. Tofu quinoa tumblr, vexillologist af cold-pressed slow-carb blog bitters kombucha. Taxidermy occupy drinking vinegar echo park fashion axe snackwave cold-pressed semiotics kombucha post-ironic brooklyn pork belly. Austin flannel hashtag thundercats, cloud bread normcore occupy chia hella ennui chillwave. Readymade vexillologist dreamcatcher selvage, blue bottle kickstarter locavore skateboard jean shorts letterpress next level.
                 </p>   
