--- a/about.html
+++ b/about.html
@@ -20,10 +20,18 @@
     <div class="container">
         <header>
                 <h1>About CWWW</h1>
+            
+                <h2>Everybody's Water should be as clean as Schuylkill Punch</h2>
+                <p>Messenger bag irony ethical 90's salvia seitan fixie sriracha tattooed intelligentsia DIY pickled tousled ramps. Fingerstache hot chicken crucifix tbh readymade occupy. Tofu quinoa tumblr, vexillologist af cold-pressed slow-carb blog bitters kombucha. Taxidermy occupy drinking vinegar echo park fashion axe snackwave cold-pressed semiotics kombucha post-ironic brooklyn pork belly. Austin flannel hashtag thundercats, cloud bread normcore occupy chia hella ennui chillwave. Readymade vexillologist dreamcatcher selvage, blue bottle kickstarter locavore skateboard jean shorts letterpress next level.
+                </p> 
+
+                <h2>Saving Lives and improving health of millions of children</h2>
                 <p>Lorem ipsum dolor amet next level flexitarian ethical, crucifix salvia af before they sold out listicle heirloom celiac VHS distillery. Humblebrag normcore beard copper mug ramps jianbing, deep v mustache activated charcoal chia. Ennui waistcoat gastropub, tacos food truck next level forage activated charcoal lo-fi fingerstache fam hot chicken shaman raw denim. Meh jianbing taiyaki humblebrag kinfolk narwhal XOXO ramps.</p>
 
-                <p>Messenger bag irony ethical 90's salvia seitan fixie sriracha tattooed intelligentsia DIY pickled tousled ramps. Fingerstache hot chicken crucifix tbh readymade occupy. Tofu quinoa tumblr, vexillologist af cold-pressed slow-carb blog bitters kombucha. Taxidermy occupy drinking vinegar echo park fashion axe snackwave cold-pressed semiotics kombucha post-ironic brooklyn pork belly. Austin flannel hashtag thundercats, cloud bread normcore occupy chia hella ennui chillwave. Readymade vexillologist dreamcatcher selvage, blue bottle kickstarter locavore skateboard jean shorts letterpress next level.
-                </p>   
+  
+
+                <h2>You to can make a differece</h2>
+                <h3>Contribute today!</h3>
                 <p>Wolf schlitz swag VHS, squid woke craft beer pour-over brunch. Cardigan pickled readymade pabst chambray hammock deep v man bun pitchfork PBR&B. Lomo DIY single-origin coffee organic green juice. Gluten-free iceland drinking vinegar, activated charcoal everyday carry salvia intelligentsia cronut fingerstache trust fund chia af. Cray dreamcatcher shoreditch health goth church-key affogato gluten-free +1 franzen beard jianbing fashion axe occupy cold-pressed. Salvia biodiesel readymade poutine distillery green juice mustache raw denim.
                 </p>    
                 <p>Hexagon salvia intelligentsia selvage. Flannel migas direct trade poutine, bicycle rights vinyl bitters mixtape schlitz trust fund vice sriracha. Crucifix twee etsy man bun selvage, kickstarter mlkshk poutine sriracha narwhal craft beer try-hard. Activated charcoal hella scenester pop-up pabst shaman adaptogen photo booth echo park quinoa irony try-hard banh mi glossier. Schlitz poutine letterpress, craft beer DIY chartreuse vexillologist shabby chic. You probably haven't heard of them art party cardigan organic etsy tumblr PBR&B squid banh mi street art gastropub flexitarian waistcoat. Kitsch migas mixtape, food truck hell of man bun gastropub.
