--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li>Home
             </li>
-            <li><a href="about.us">About Us</a>
+            <li><a href="about.html">About Us</a>
             </li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
