fixed nav menu on About Us page

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                           <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
                           <fieldset>
                                 <legend>Donate:</legend>
-                                   <div ="button">
+                                   <div class="button">
                                     <button> 25 </button>
                                     <button>50 </button>
                                     <button> 75</button>
