--- a/about.html
+++ b/about.html
@@ -8,20 +8,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav class="top-nav">
-        <ul>
-            <li><a href="index.html">Home</a>
-            </li>
-            <li>About Us
-            </li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
-    <div class="container">
-        <header>
-                <h1>About CWWW</h1>
+		<!-- Header -->
+        <header id="header">
+            <div class="inner">
+                <a href="index.html" class="logo"><img src="images/logo.png" style="width:250px;"></a>
+                <nav id="nav">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
         </header>
-                <img src="images/clean-water.jpg" style="float:right">
+        <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+
+                <h1>About CWWW</h1>
+        
+                <img src="images/clean-water.jpg" style="float:right; padding:5px">
                 <h2>Everybody's Water should be as clean as Schuylkill Punch</h2>
                 <p>Messenger bag irony ethical 90's salvia seitan fixie sriracha tattooed intelligentsia DIY pickled tousled ramps. Fingerstache hot chicken crucifix tbh readymade occupy. Tofu quinoa tumblr, vexillologist af cold-pressed slow-carb blog bitters kombucha. Taxidermy occupy drinking vinegar echo park fashion axe snackwave cold-pressed semiotics kombucha post-ironic brooklyn pork belly. Austin flannel hashtag thundercats, cloud bread normcore occupy chia hella ennui chillwave. Readymade vexillologist dreamcatcher selvage, blue bottle kickstarter locavore skateboard jean shorts letterpress next level.
                 </p> 
@@ -30,7 +32,7 @@
                 <p>Lorem ipsum dolor amet next level flexitarian ethical, crucifix salvia af before they sold out listicle heirloom celiac VHS distillery. Humblebrag normcore beard copper mug ramps jianbing, deep v mustache activated charcoal chia. Ennui waistcoat gastropub, tacos food truck next level forage activated charcoal lo-fi fingerstache fam hot chicken shaman raw denim. Meh jianbing taiyaki humblebrag kinfolk narwhal XOXO ramps.</p>
 
   
-                <img src="images/purified-water.jpg" style="float:left">
+                <img src="images/purified-water.jpg" style="float:left; padding:5px">
                 <h2>You to can make a differece</h2>
                 <h3>Contribute today!</h3>
                 <p>Wolf schlitz swag VHS, squid woke craft beer pour-over brunch. Cardigan pickled readymade pabst chambray hammock deep v man bun pitchfork PBR&B. Lomo DIY single-origin coffee organic green juice. Gluten-free iceland drinking vinegar, activated charcoal everyday carry salvia intelligentsia cronut fingerstache trust fund chia af. Cray dreamcatcher shoreditch health goth church-key affogato gluten-free +1 franzen beard jianbing fashion axe occupy cold-pressed. Salvia biodiesel readymade poutine distillery green juice mustache raw denim.
